# aarg

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  cog.toml  dist-workspace.toml
.github/: build-setup.yml
.github/workflows/: build-artifacts.yml  ci.yml  publish-crates.yml  release.yml
crates/aarg-core/: Cargo.toml
crates/aarg-core/src/: agent.rs  lib.rs  trace.rs  user.rs
crates/aarg-core/src/llm/: anthropic.rs  client.rs  context.rs  lines.rs  mock.rs  mod.rs  ollama.rs  openai_compat.rs  types.rs
crates/aarg-domain/: Cargo.toml
crates/aarg-domain/src/: cover.rs  cover_interview.rs  cover_provenance.rs  gap.rs  jd.rs  jdchat.rs  keywords.rs  lib.rs  metric.rs  provenance.rs  review.rs  strengthen.rs  tailor.rs  tune.rs  variant.rs
crates/aarg-domain/src/dataset/: mod.rs  validate.rs
crates/aarg-wasm/: Cargo.toml
crates/aarg-wasm/src/: bridge.rs  lib.rs
crates/aarg-wasm/www/: README.md  index.html
docs/: demo-evidence.tape  demo.tape  local-models.md  mcp.md  releasing.md
docs/demo/: capture-screenshots.mjs  denylist.txt  job.txt  resume.md
docs/demo/workspace/: config.toml  dataset.json
docs/demo/workspace/builds/044/: adversarial_report.json  ats_payload.json  ats_report.json  canonical.json  gap_report.json  human_payload.json  jd.json  meta.json  readability_report.json
docs/demo/workspace/builds/045/: adversarial_report.json  ats_payload.json  ats_report.json  canonical.json  gap_report.json  human_payload.json  jd.json  meta.json  readability_report.json
docs/demo/workspace/builds/046/: adversarial_report.json  ats_payload.json  ats_report.json  canonical.json  gap_report.json  human_payload.json  meta.json  readability_report.json
docs/demo/workspace/builds/047/: adversarial_report.json  ats_payload.json  canonical.json  gap_report.json  meta.json  readability_report.json
docs/demo/workspace/builds/048/: adversarial_report.json  ats_payload.json  ats_report.json  canonical.json  jd.json  meta.json  readability_report.json
docs/demo/workspace/builds/049/: adversarial_report.json  ats_payload.json  ats_report.json  canonical.json  gap_report.json  meta.json  readability_report.json
docs/demo/workspace/builds/050/: aarg-template-lib.typ  adversarial_report.json  ats_payload.json  ats_report.json  canonical.json  cover.typ  cover_payload.json  editorial.typ  human_payload.json  jd.json  meta.json  readability_report.json
docs/demo/workspace/builds/051/: adversarial_report.json  ats_payload.json  canonical.json  cover_payload.json  gap_report.json  human_payload.json  meta.json  readability_report.json
docs/design/: adversarial-loop.md  agent-runtime.md
scripts/: dev-reinstall.sh  pii-scan.py  set-version.sh
scripts/hooks/: pre-commit
src/: agent.rs  ats.rs  builds.rs  cli.rs  config.rs  cover.rs  enrich.rs  fetch.rs  gap.rs  guide.rs  history.rs  ingest.rs  jd.rs  jdchat.rs  jdstore.rs  keywords.rs  lib.rs  main.rs  metric.rs  mirror.rs  pricing.rs  readability.rs  render.rs  repl.rs  repoimport.rs  review.rs  secrets.rs  strengthen.rs  style.rs  summary.rs  tailor.rs  templates.rs  terminal.rs  trace.rs  tune.rs  variant.rs  verify.rs  vision.rs  voice.rs  workspace.rs
src/commands/: attack.rs  chat.rs  completions.rs  config.rs  cover.rs  dataset.rs  experience.rs  export.rs  gap.rs  history.rs  ingest.rs  init.rs  jd.rs  key.rs  mcp.rs  mod.rs  open.rs  ping.rs  render.rs  roles.rs  serve.rs  skills.rs  tailor.rs  templates.rs  trace.rs  tune.rs  voice.rs
src/commands/serve/: embedded.rs  routes.rs  statics.rs
src/dataset/: mod.rs  store.rs  types.rs  validate.rs
src/evals/: fixtures.rs  gap.rs  jd.rs  mod.rs  review.rs  tailor.rs
src/llm/: anthropic.rs  mock.rs  mod.rs  types.rs
src/mcp/: client.rs  mod.rs  protocol.rs  server.rs  tools.rs
templates/ats/: classic.typ  minimal.typ
templates/human/: editorial.typ  modern.typ  technical.typ
web/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
web/src/: index.html  styles.css
web/src/app/: app.css  app.html  app.routes.ts  app.spec.ts  app.ts
web/src/app/features/build-landing/: build-landing.ts
web/src/app/features/build-overview/: build-overview.css  build-overview.html  build-overview.ts
web/src/app/features/new-build/: new-build.ts
web/src/app/features/tailoring-workspace/: cover-preview.model.spec.ts  cover-preview.model.ts  cover-preview.ts  cover-view.spec.ts  cover-view.ts  coverage-map.ts  edit-bar.ts  pdf-preview.ts  refine-drawer.ts  resume-preview.ts  reviewer-rail.ts  tailoring-workspace.ts  workspace.model.spec.ts  workspace.model.ts
web/src/app/models/: ats.ts  build.ts  cost.ts  cover-provenance.ts  cover.ts  dataset.ts  gap.ts  index.ts  jd.ts  llm.ts  provenance.ts  review.ts  variant.ts
web/src/app/services/: api.service.ts  build-runner.ts  builds-store.ts  chat-store.ts  wasm.service.ts
web/src/app/shared/: copilot-host.ts  coverage-map.ts  coverage-score.ts  download.ts  normalize-dashes.ts  score-panel.ts  view-toggle.ts
web/src/app/shell/chat-panel/: artifact-card.ts  artifacts.spec.ts  artifacts.ts  chat-panel.ts  markdown.spec.ts  markdown.ts
web/src/app/shell/sidebar/: sidebar.ts
web/src/app/shell/topbar/: topbar.ts
web/src/wasm/: wasm-modules.d.ts
