[workspace]
members = ["crates/aarg-core", "crates/aarg-domain"]

[package]
name = "aarg"
version = "0.1.0"
edition = "2024"
# File::try_lock in the dataset store needs 1.89's stabilized file locking.
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "The Adversarial Agentic Resume Generator - a local-first CLI that tailors resumes to job descriptions without fabricating experience"
authors = ["Josey Morton <me@joseymorton.com>"]
repository = "https://github.com/joseymorton/aarg"

[dependencies]
aarg-core = { path = "crates/aarg-core" }
aarg-domain = { path = "crates/aarg-domain" }
async-trait = "0.1.89"
# Encode image/PDF bytes for the vision content blocks sent to the model.
base64 = "0.22"
chrono = { version = "0.4.42", default-features = false, features = ["std", "clock", "serde"] }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.1"
# Terminal width + ANSI-aware text measurement for width-adaptive layouts.
# Already built as a transitive dep of indicatif, so this adds no compile cost.
console = "0.16.3"
directories = "6.0.0"
indicatif = "0.18.4"
inquire = "0.9.4"
keyring = { version = "3", features = ["apple-native", "windows-native", "async-secret-service", "tokio", "crypto-rust"] }
miette = { version = "7.6.0", features = ["fancy"] }
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
pdf-extract = "0.7"
reedline = "0.48.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "stream", "rustls", "http2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shell-words = "1.1.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"

# Production code may not unwrap, expect, or panic; errors are typed enums
# propagated with `?`. Test modules opt out locally with #[allow(...)].
[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[dev-dependencies]
tempfile = "3.27.0"
