[workspace]
members = ["crates/aarg-core", "crates/aarg-domain", "crates/aarg-wasm"]

[package]
name = "aarg"
version = "0.1.0"
edition = "2024"
# File::try_lock in the dataset store needs 1.89's stabilized file locking.
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "The Adversarial Agentic Resume Generator - a local-first CLI that tailors resumes to job descriptions without fabricating experience"
authors = ["Josey Morton <me@joseymorton.com>"]
repository = "https://github.com/joseymorton/aarg"

[dependencies]
aarg-core = { path = "crates/aarg-core" }
aarg-domain = { path = "crates/aarg-domain" }
async-trait = "0.1.89"
# Encode image/PDF bytes for the vision content blocks sent to the model.
base64 = "0.22"
chrono = { version = "0.4.42", default-features = false, features = ["std", "clock", "serde"] }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.1"
# Terminal width + ANSI-aware text measurement for width-adaptive layouts.
# Already built as a transitive dep of indicatif, so this adds no compile cost.
console = "0.16.3"
directories = "6.0.0"
# The `aarg serve` companion server is hand-rolled on hyper (no web framework),
# the same portfolio move as the hand-written MCP server and reqwest clients.
# hyper + hyper-util + http-body-util already compile as transitive deps of
# reqwest at these versions, so promoting them to direct deps adds no new crates.
http-body-util = "0.1"
hyper = { version = "1.10", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
indicatif = "0.18.4"
inquire = "0.9.4"
keyring = { version = "3", features = ["apple-native", "windows-native", "async-secret-service", "tokio", "crypto-rust"] }
miette = { version = "7.6.0", features = ["fancy"] }
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
pdf-extract = "0.7"
reedline = "0.48.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "stream", "rustls", "http2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shell-words = "1.1.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"

# Production code may not unwrap, expect, or panic; errors are typed enums
# propagated with `?`. Test modules opt out locally with #[allow(...)].
[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[dev-dependencies]
tempfile = "3.27.0"

# Cargo only reads profiles from the workspace root, so the wasm bundle's
# release tuning lives here even though it applies to one package. Scoped to
# aarg-wasm so it doesn't slow down (or shrink) the aarg CLI's own release
# build. Workspace-wide `lto` was deliberately skipped for the same reason —
# it would apply to the CLI too and cost it build time for no benefit there.
#
# Per-package profile overrides tune only that package's OWN code — Cargo
# does not propagate them to dependencies. So this only shrinks aarg-wasm's
# own few hundred lines; aarg-domain, aarg-core, serde_json, and the rest of
# the dependency graph (the bulk of the compiled bundle) still build under
# plain default `[profile.release]` settings. Reaching the dependencies too
# would need a custom `[profile.wasm-release]` (with its own
# `[profile.wasm-release.package."*"]` table), selected by building with
# `--profile wasm-release` — but wasm-pack, which drives this build, only
# knows the built-in dev/release/profiling profiles, not custom ones. That
# fuller lever is deliberately not used here; this override is the one
# wasm-pack can actually reach.
[profile.release.package.aarg-wasm]
opt-level = "z"
codegen-units = 1
