[package]
name = "aarg-wasm"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "WebAssembly bindings for AARG's deterministic, model-free domain logic: dataset validation, gap preview, ATS projection, and never-fabricate claim checks — callable from a web UI"
authors = ["Josey Morton <me@joseymorton.com>"]
repository = "https://github.com/joseymorton/aarg"

[lib]
# cdylib for the wasm bundle a JS UI loads; rlib so the bindings can also be
# unit-tested as ordinary Rust on the host.
crate-type = ["cdylib", "rlib"]

[dependencies]
# The portable domain, with the native runtime compiled out. Only the
# deterministic, model-free functions are bound here — no LLM client, no
# filesystem, no typst.
aarg-domain = { path = "../aarg-domain", default-features = false }
wasm-bindgen = "0.2"
serde = "1.0.228"
serde_json = "1.0.150"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
